--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^7.1.0
+  font_awesome_flutter: ^8.5.0
   bloc_pattern: ^1.5.2
   firebase_auth: ^0.8.3
   cloud_firestore: ^0.9.8
   firebase_storage: ^2.1.0+1
   firebase_analytics: ^1.0.2
-  firebase_messaginmg: ^1.0.4
+  firebase_messaging: ^1.0.4
   scoped_model: ^0.3.0
   rxdart: ^0.21.0
   
